--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
             - REDIS_PORT=6379
         networks:
             - app-network
+        volumes:
+            - .:/var/www/html
         ports:
             - "8000:8000"
         depends_on:
