--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,33 +33,15 @@ jobs:
       # Шаг 5: Копирование файлов на сервер (исключая .env)
       - name: Copy files to server
         run: |
-          rsync -avr --exclude='.git' --exclude='storage/logs' --exclude='node_modules' --exclude='vendor' --exclude='.env' ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/path/to/your/project/
+          rsync -avr --exclude='.git' --exclude='storage/logs' --exclude='node_modules' --exclude='vendor' --exclude='.env' ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/api.rechip-tuning.ru
         env:
           RSYNC_RSH: "ssh -p ${{ secrets.SSH_PORT }}"
 
-      # Шаг 6: Создание или обновление файла .env на сервере
-      - name: Update .env on server
-        run: |
-          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cat > /path/to/your/project/.env" <<EOF
-APP_ENV=production
-APP_DEBUG=false
-APP_KEY=${{ secrets.APP_KEY }}
-APP_TIMEZONE=${{ secrets.APP_TIMEZONE }}
-DB_CONNECTION=pgsql
-DB_HOST=postgres_rechip
-DB_PORT=5432
-DB_DATABASE=${{ secrets.DB_DATABASE }}
-DB_USERNAME=${{ secrets.DB_USERNAME }}
-DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-REDIS_HOST=redis_rechip
-REDIS_PORT=6379
-EOF
-
-      # Шаг 7: Выполнение команд на сервере
+      # Шаг 6: Выполнение команд на сервере
       - name: Deploy commands
         run: |
           ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-            cd /path/to/your/project/
+            cd /var/www/api.rechip-tuning.ru
             docker-compose pull
             docker-compose up -d --build
             docker-compose exec app composer install --prefer-dist --no-dev --optimize-autoloader
