--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,36 +14,54 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Шаг 2: Настройка SSH Agent
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.5.4  # Убедитесь, что используете существующую версию
+      # Шаг 2: Установка Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Шаг 3: Билд Docker-образа
+      - name: Build Docker image
+        run: |
+          docker build -t api-rechip-tuning:latest .
+      
+      # Шаг 4: Сохранение Docker-образа в tar-архив
+      - name: Save Docker image to tar
+        run: |
+          docker save api-rechip-tuning:latest -o api-rechip-tuning.tar
+
+      # Шаг 5: Передача tar-архива на сервер
+      - name: Upload Docker image to server
+        uses: appleboy/scp-action@v0.1.5
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      # Шаг 3: Добавление хоста в known_hosts
-      - name: Add server to known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-
-      # Шаг 4: Установка rsync
-      - name: Install rsync
-        run: sudo apt-get update && sudo apt-get install -y rsync
-
-      # Шаг 5: Копирование файлов на сервер (исключая .env)
-      - name: Copy files to server
-        run: |
-          rsync -avr --exclude='.git' --exclude='storage/logs' --exclude='node_modules' --exclude='vendor' --exclude='.env' ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/var/www/api.rechip-tuning.ru
-        env:
-          RSYNC_RSH: "ssh -p ${{ secrets.SSH_PORT }}"
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "api-rechip-tuning.tar"
+          target: "/var/www/api.rechip-tuning.ru/api-rechip-tuning.tar"
 
       # Шаг 6: Выполнение команд на сервере
-      - name: Deploy commands
-        run: |
-          ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+      - name: Deploy Docker image on server
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
             cd /var/www/api.rechip-tuning.ru
-            docker-compose pull
-            docker-compose up -d --build
-            docker-compose exec app composer install --prefer-dist --no-dev --optimize-autoloader
-            docker-compose exec app php artisan migrate --force
-          EOF
+
+            # Загрузка Docker-образа
+            docker load -i api-rechip-tuning.tar
+
+            # Обновление docker-compose.yml (если требуется)
+            # rsync или другие команды для обновления конфигурации
+
+            # Перезапуск контейнеров
+            docker-compose down
+            docker-compose up -d --no-deps --build
+
+            # Очистка tar-архива после загрузки
+            rm -f api-rechip-tuning.tar
+
+            # Самоочистка Docker ресурсов
+            docker system prune -af
